packages/typ/tests/fixtures/diagnostics/0622_functor_opaque_result_operator_mismatch_07.ml.expected
File "0622_functor_opaque_result_operator_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0622_functor_opaque_result_operator_mismatch_07 is not a valid module name.

File "0622_functor_opaque_result_operator_mismatch_07.ml", line 22, characters 8-17:
22 | let _ = Out_eta.y + 7
             ^^^^^^^^^
Error: The value Out_eta.y has type Out_eta.u = Make_eta(Input_eta).u
       but an expression was expected of type int
